fixed white corner appearing when double scrollbar (horiz+vertical) in .search-dropdown

--- a/live/style.css
+++ b/live/style.css
@@ -382,6 +382,11 @@ div.search .search-dropdown::-webkit-scrollbar-thumb:hover {
     background-clip: content-box;
 }
 
+.scrollable::-webkit-scrollbar-corner,
+.search-dropdown::-webkit-scrollbar-corner {
+    background-color: var(--bg-card);
+}
+
 /* Table */
 table {
     width: 100%;
